# positioning-system

./: Cargo.toml
firmware/: Cargo.toml
firmware/src/: encoder.rs  lidar.rs  main.rs  odometry.rs
firmware/src/imu/: mod.rs  registers.rs  task.rs
hardware/: 12V_buck.kicad_sch  encoder_interface.kicad_sch  fp-lib-table  positioning_board.kicad_pcb  positioning_board.kicad_pro  positioning_board.kicad_sch  smart_port.kicad_sch  usb_port.kicad_sch
hardware/RJ11.pretty/: RJ11-4P4C.kicad_mod
lidar-lib/: Cargo.toml
lidar-lib/src/: crc.rs  data.rs  field_map.rs  lib.rs  line_seg.rs  vector.rs
linalg/: Cargo.toml
linalg/src/: bounds.rs  lib.rs  line.rs
linalg/src/matrix/: mod.rs  ops.rs  solver.rs
linalg/src/vector/: mod.rs  real.rs
position-lib/: Cargo.toml
position-lib/src/: field_map.rs  lib.rs  odometry.rs  sensor.rs  vector.rs
position-lib/src/linalg/matrix/: mod.rs  ops.rs
position-lib/src/linalg/vector/: mod.rs  real.rs
position-lib/src/vector/: mod.rs  real.rs
