[workspace]
resolver = "3"
members = ["lidar-lib", "linalg", "position-lib"]
exclude = [
    "firmware",
] # firmware uses the esp rust toolchain so it cannot be included as part of the workspace

[workspace.dependencies]
uom = { git = "https://github.com/UCCR1/uom", default-features = false, features = [
    "si",
    "f32",
    "libm",
] }
thiserror = { version = "2.0.18", default-features = false }
heapless = "0.9.2"
