[package]
edition = "2024"
name = "firmware"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

critical-section = "1.2.0"
position-lib = { path = "../position-lib" }
lidar-lib = { path = "../lidar-lib" }
uom = { version = "0.38.0", default-features = false, features = ["si", "f32"]}
paste = "1.0.15"
thiserror = { version = "2.0.18", default-features = false }
heapless = "0.9.2"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
