[package]
edition = "2024"
name = "firmware"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

critical-section = "1.2.0"
position-lib = { path = "../position-lib" }
lidar-lib = { path = "../lidar-lib" }
linalg = { path = "../linalg" }
uom = { git = "https://github.com/UCCR1/uom", default-features = false, features = [
    "si",
    "f32",
    "libm",
] }
paste = "1.0.15"
thiserror = { version = "2.0.18", default-features = false }
heapless = "0.9.2"
embedded-hal-bus = "0.3.0"
embedded-hal = "1.0.0"
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
packbits = "0.1.1"
num_enum = { version = "0.7.5", default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
