[package]
name = "lidar-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
libm = "0.2.16"
uom = { version = "0.38.0", default-features = false, features=["f32", "si"]}
position-lib = { path="../position-lib" }
zerocopy = { version = "0.8.42", features=["derive"]}

[dev-dependencies]
approx = "0.5.1"
