[package]
name = "position-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
uom = { workspace = true }
linalg = { path = "../linalg" }
libm = { workspace = true }
kalman_filters = "1.0.1"
heapless = { workspace = true }

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }
